@@ -1,3 +1,12 @@
+2011-05-04  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Windows build fix attempt after r85823
+
+        * WebCoreSupport/WebChromeClient.h:
+        (WebChromeClient::webView):
+        * WebView.cpp:
+        (kit):
+
 2011-05-04  Cris Neckar  <cdn@chromium.org>
 
         Reviewed by Adam Barth.
